# TskTest

./: database.db  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 35a2856159a9_.py  45d63f19401d_upgrade_id_tables.py  842d627eb5a1_fix_post_table.py  9838f1b0d1dd_create_tables.py  c43bef1a8b9b_add_fix_user_and_post_tables.py  c53a2db4df56_add_tables.py  c6d9c0c35e32_update_posts_table.py  cbee87b898c2_new_version_db.py  f53c3b68fd53_fix_user_table.py
tsk/: abs_crud.py  database.db  main.py  settings.py
tsk/api/auth/: auth_p.py  security.py
tsk/api/exceptions/: user_exception.py
tsk/api/models/: PostPDModel.py  UserPDModel.py
tsk/api/routers/: post_router.py  user_router.py
tsk/api/services/: PostService.py  UserService.py
tsk/db/: __init__.py  db_connection.py  mainbase.py
tsk/db/db_service/: post_db_service.py  user_db_service.py
tsk/db/models/: PostModel.py  UserModel.py
