[tool.poetry]
name = "taskprojects"
version = "0.1.0"
description = "Simple project for study"
authors = ["darkfos82"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.110.1"}
sqlalchemy = "^2.0.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
